fixed spacing of home page

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,11 +2,6 @@
     flex: auto;
   }
 
-/* .slick-slider {  
-  width: 90%;  
-  margin: auto;  
-} */
-
 .slick-slider {
   width: 60%;
   margin: auto;
